cleaned up cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ set(CMAKE_C_STANDARD 23)
 
 include_directories(./include)
 
-add_executable(Projeto1 src/main.c src/sqlite3.c
+add_executable(Projeto1 src/main.c
+        src/sqlite3.c
         src/api.c
-        include/api.h
         src/server.c
-        include/server.h)
+)
