--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,12 +1,12 @@
-cmake_minimum_required(VERSION 3.30)
-project(Projeto1 C)
+cmake_minimum_required(VERSION 3.24)
+project(Projeto1_Server C)
 
 set(CMAKE_C_STANDARD 23)
 
 
 include_directories(include)
 
-add_executable(Projeto1 src/main.c
+add_executable(Projeto1_Server src/main.c
         src/sqlite3.c
         src/api.c
         src/server.c
