--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -4,6 +4,4 @@ project(Projeto1_Client C)
 set(CMAKE_C_STANDARD 23)
 
 
-add_executable(Projeto1_Client src/main.c
-        src/api.c
-)
+add_executable(Projeto1_Client src/main.c)
